[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/StoreMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/ButtonStore.tscn" type="PackedScene" id=2]
[ext_resource path="res://Script/StoreVehicles.gd" type="Script" id=3]
[ext_resource path="res://assets/Store_Vehicles.png" type="Texture" id=4]

[node name="Store - Vehicles" type="Node2D"]
script = ExtResource( 3 )

[node name="StoreVehicles" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" parent="." instance=ExtResource( 1 )]

[node name="Bicycle" parent="." instance=ExtResource( 2 )]
margin_left = 18.0
margin_top = 285.0
margin_right = 253.0
margin_bottom = 591.0

[node name="Eletric_Bike" parent="." instance=ExtResource( 2 )]
margin_left = 280.0
margin_top = 285.0
margin_right = 515.0
margin_bottom = 589.0

[node name="Motorcycle" parent="." instance=ExtResource( 2 )]
margin_left = 536.0
margin_top = 282.0
margin_right = 771.0
margin_bottom = 590.0

[node name="Standard_Car" parent="." instance=ExtResource( 2 )]
margin_left = 787.0
margin_top = 282.0
margin_right = 1022.0
margin_bottom = 590.0

[node name="Deluxe_Car" parent="." instance=ExtResource( 2 )]
margin_left = 1031.0
margin_top = 283.0
margin_right = 1257.0
margin_bottom = 588.0

[connection signal="pressed" from="Bicycle" to="." method="_on_Bicycle_pressed"]
[connection signal="pressed" from="Eletric_Bike" to="." method="_on_Eletric_Bike_pressed"]
[connection signal="pressed" from="Motorcycle" to="." method="_on_Motorcycle_pressed"]
[connection signal="pressed" from="Standard_Car" to="." method="_on_Standard_Car_pressed"]
[connection signal="pressed" from="Deluxe_Car" to="." method="_on_Deluxe_Car_pressed"]
